@@ -299,50 +299,7 @@ because we want to be to able to execute mvn sonar:sonar without passing a profi
 	
 	
 	
-	<!-- coverage -->
-<profile>
-    <id>coverage</id>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>${jacoco.agent.ut.arg}</argLine>
-                    <!-- Specific to generate mapping between tests and covered code -->
-                    <properties>
-                        <property>
-                            <name>listener</name>
-                            <value>org.sonar.java.jacoco.JUnitListener</value>
-                        </property>
-                    </properties>
-                    <!-- test failure ignore -->
-                    <testFailureIgnore>true</testFailureIgnore>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}
-                    </argLine>
-                    <!-- Specific to generate mapping between tests and covered code -->
-                    <properties>
-                        <property>
-                            <name>listener</name>
-                            <value>org.sonar.java.jacoco.JUnitListener</value>
-                        </property>
-                    </properties>
-                    <!-- Let's put failsafe reports with surefire to have access to tests 
-                        failures/success reports in sonar -->
-                    <reportsDirectory>${project.build.directory}/surefire-reports
-                    </reportsDirectory>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
+	
 
 	
 	
